[project]
name = "chatbot-backend-python"
version = "0.1.0"
description = ""
authors = [
    {name = "boonhao.chew"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ctransformers (>=0.2.27,<0.3.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "pyowm (>=3.3.0,<4.0.0)",
    "setuptools (>=76.1.0,<77.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "openai (>=1.66.3,<2.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "forex-python (>=1.8,<2.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
